--- a/lee-y/2026-02.md
+++ b/lee-y/2026-02.md
@@ -1,12 +1,11 @@
 # Yeonwoo Lee
 
-
 ## w/c 16 February 2026
 
 ### Rose-bud-thorn
 
 #### 🌹
-* I liked getting to work with SL and AB during my shift on Tuesday! It was nice to be in the office in the morning.  
+* I liked getting to work with SL and AB during my shift on Tuesday! It was nice to be in the office in the morning.
 
 #### 🌱
 * I am going home this weekend!
@@ -28,25 +27,22 @@
 
 #### What did I do?
 ##### OSPO Blog Post
-* Wrote the social media posts and encorporated comments into the blog post. (2.5 hrs) 
+* [#32](https://github.com/BIDS/interns/issues/32) Wrote the social media posts and encorporated comments into the blog post. (2.5 hrs) 
 
-##### OSPO Blog Post
-* Get started on organizing the spreadsheet for the Cultural Analytics workshop week schedule/getting familiar with the project. (2.25 hrs)
+##### Cultural Analytics
+* [#88](https://github.com/BIDS/interns/issues/88) Get started on organizing the spreadsheet for the Cultural Analytics workshop week schedule/getting familiar with the project. (2.25 hrs)
 
 ##### Help read over annual report
 * Read aloud the report so LWH made sure things matched up. (.25 hrs)
 
-
 #### What will I do next week?
-*Get all of the gcal invitations and finish the spreadsheet!
+
+* Get all of the gcal invitations and finish the spreadsheet!
 * My available hours next week are:
   * Mon, 3:15pm to 6:15pm 
   * Wed, 3:15pm to 6:15pm 
 
-
-
 # Yeonwoo Lee
-
 
 ## w/c 9 February 2026
 
